2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Avoid emitting some unecessary bank switching calls.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCast.c:
	  Keep global named address spaces alive over functions.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c:
	  Debug message cleanup, reenable address space splitting.

2011-11-14 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt,
	* device/non-free/include/pic14/pic16f145[589].h,
	* device/non-free/include/pic14/pic16f178[23].h,
	* device/non-free/lib/pic14/libdev/Makefile.in,
	* device/non-free/lib/pic14/libdev/devices.txt,
	* device/non-free/lib/pic14/libdev/pic16f145[589].c,
	* device/non-free/lib/pic14/libdev/pic16f178[23].c:
	  add support for 16f145[589] and 16f178[23] devices

	* device/non-free/include/pic14/pic12f683.h,
	* device/non-free/lib/pic14/libdev/pic12f683.c:
	  updated from new sources

	* doc/sdccman.lyx:
	  update device list, clarify use of NO_LEGACY_NAMES

2011-11-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: added the boost dependency,
	  --peep-return, --no-peep-return, --fomit-frame-pointer,
	  the use of .omf extension,
	  single mnemonic per assembly line,
	  available peephole functions

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c:
	  Basic support for pointers into named address spaces.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCC.y,
	  src/SDCCopt.c,
	  src/SDCCast.c:
	  Debug messages related to pointers to named address spaces.

2011-11-12 Borut Razem <borut.razem AT gmail.com>

	* added XXX_bits deprecation note in chapter
	  1.4 Compatibility with previous versions
